# re2fa

./: .gitignore  Doxyfile  Doxyfile.in  Makefile  Makefile.am  README.md  configure.ac  main.c
.github/: sonar-project.properties
.github/workflows/: main.yml  pages.yml
benchmark/: Makefile.am
lib/: Makefile  Makefile.am  dfa.c  dfa.format  dfa.h  dfa_to_nfa.c  dfa_to_nfa.h  dfastat.h  nfa.c  nfa.h  nfa_to_dfa.c  nfa_to_dfa.h  parser.c  parser.h  parser_inner.c  parser_inner.h  refa.h  simple_list.c  simple_list.h  tree_to_nfa.c  tree_to_nfa.h
m4/: ax_enable_library.m4
test/: Makefile.am  dfa.cpp  dfa_bench.cpp  nfa.cpp  nfa_to_dfa.cpp  re_tree.cpp
tools/: Makefile.am  re2fa.c
